# Django-sql-printer

./: .gitignore  README.md  print_sql_tool.py  pyproject.toml  setup.cfg
print_sql_tool/: __init__.py  print_sql_tool.py
