[metadata]
name = print_sql_tool
version = 0.0.2
description = print_sql_tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rwwwrl/Django-sql-printer
author = Alexey Sosov
author_email = lesh.solowiew@yandex.ru
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >= 3.6
install_requires =
    Django
